[gd_scene load_steps=8 format=3 uid="uid://clgn2bcvfayy"]

[ext_resource type="Script" uid="uid://6gv4l7thu4wc" path="res://Assets/Prefabs/boulder.gd" id="1_itcnh"]
[ext_resource type="Texture2D" uid="uid://bslvmoibm6qwx" path="res://Assets/Prefabs/Boulder.png" id="1_t0mnw"]
[ext_resource type="AudioStream" uid="uid://bo6fl5sw8yql0" path="res://Assets/Sound/Sfx/BoulderCrash.wav" id="2_ovvde"]
[ext_resource type="AudioStream" uid="uid://32xvwmf1long" path="res://Assets/Sound/Sfx/BoulderRolling.wav" id="3_egnu3"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_ft6lw"]
friction = 0.0
bounce = 0.2

[sub_resource type="CircleShape2D" id="CircleShape2D_qw8v6"]
radius = 29.5572

[sub_resource type="CircleShape2D" id="CircleShape2D_jaudt"]
radius = 8.6677

[node name="Boulder" type="RigidBody2D" node_paths=PackedStringArray("FallTimer")]
collision_layer = 32768
collision_mask = 32768
physics_material_override = SubResource("PhysicsMaterial_ft6lw")
can_sleep = false
script = ExtResource("1_itcnh")
crash_sfx = ExtResource("2_ovvde")
roll_sfx = ExtResource("3_egnu3")
detection_range = 1000.0
FallTimer = NodePath("FallTimer")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(4, 4)
texture = ExtResource("1_t0mnw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -0.138482
scale = Vector2(4, 4)
shape = SubResource("CircleShape2D_qw8v6")

[node name="FallTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Boulder" type="Area2D" parent="."]
collision_layer = 32768
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boulder"]
scale = Vector2(14.7679, 14.5936)
shape = SubResource("CircleShape2D_jaudt")

[node name="CrashSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_ovvde")
max_distance = 10485.0

[node name="RollSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_egnu3")
max_distance = 18290.0

[connection signal="timeout" from="FallTimer" to="." method="_on_timer_timeout"]
